Update debug.sh